--- a/static/css/global/2.0.0/dashboard.css
+++ b/static/css/global/2.0.0/dashboard.css
@@ -44,13 +44,17 @@ html, body {
 @media (min-width: 768px) {
     .nav-sidebar {
         position: fixed;
+        padding: 20px 0;
+        background: #f5f5f5;
+        border-right: 1px solid #eee;
         top: 50px;
         bottom: 0;
         left: 0;
         z-index: 1000;
         display: block;
-        overflow-x: hidden;
-        overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+        overflow: hidden;
+        /*overflow-x: hidden;
+         overflow-y: auto;Scrollable contents if viewport is shorter than content. */
     }
 }
 
