--- a/static/css/global/2.0.0/sidebar.css
+++ b/static/css/global/2.0.0/sidebar.css
@@ -1,8 +1,8 @@
 .sidebar {
     display: block;
     float: left;
-    width: 250px;
-    background: #333;
+    width: 100%;
+
 }
 
 .content {
@@ -12,11 +12,7 @@
 }
 
 .sidebar-nav {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-    background-image: -webkit-linear-gradient(left, color-stop(#333333 10px), color-stop(#222222 10px));
-    background-image: linear-gradient(to right, #333333 10px, #222222 10px);
-    background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff333333', endColorstr='#ff222222', GradientType=1);
+    background: #f5f5f5;
 }
 
 .sidebar-nav ul {
@@ -38,11 +34,9 @@
 }
 
 .sidebar-nav ul a {
-    padding: 10px 20px;
-    color: #aaa;
-    border-top: 1px solid rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.05) inset;
-    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.5);
+    padding: 10px 20px 10px 40px;
+    color: #fff;
+    background: #428bca;
 }
 
 .sidebar-nav ul a:hover,
@@ -53,14 +47,16 @@
 }
 
 .sidebar-nav ul ul a {
-    padding: 10px 30px;
-    background-color: rgba(255, 255, 255, 0.1);
+    color: #337ab7;
+    padding: 10px 20px 10px 40px;
+    background-color: transparent;
 }
 
 .sidebar-nav ul ul a:hover,
 .sidebar-nav ul ul a:focus,
 .sidebar-nav ul ul a:active {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: #eee;
+    color: #23527C;
 }
 
 .sidebar-nav-item {
