--- a/static/css/global/2.0.0/dashboard.css
+++ b/static/css/global/2.0.0/dashboard.css
@@ -104,3 +104,12 @@ html, body {
     height: 100%;
 }
 
+.home {
+    font-size: 12px;
+    display: block;
+    position: absolute;
+    top: 11px;
+    height: 14px;
+    width: 14px;
+    left: 11px;
+}
