--- a/views/templates/home/screen/index.vm
+++ b/views/templates/home/screen/index.vm
@@ -1,1 +1,3 @@
-<div id="ui-tabs"></div>
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 ui-main">
+    <div id="ui-tabs"></div>
+</script>
