--- a/static/css/global/2.0.0/dashboard.css
+++ b/static/css/global/2.0.0/dashboard.css
@@ -46,7 +46,7 @@ html, body {
         position: fixed;
         padding: 20px 0;
         background: #f5f5f5;
-        border-right: 1px solid #eee;
+        border-right: 1px solid #ddd;
         top: 50px;
         bottom: 0;
         left: 0;
