--- a/static/css/global/2.0.0/tabPanel.css
+++ b/static/css/global/2.0.0/tabPanel.css
@@ -27,13 +27,15 @@
     margin: 0;
     padding-left: 20px;
     position: relative;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #bbb;
 }
 
 .tabpanel_mover li {
+    margin-right: 5px;
     margin-bottom: -1px;
     padding: 10px 25px;
-    border: 1px solid transparent;
+    border: 1px solid #ddd;
+    border-bottom: 1px solid #bbb;
     border-radius: 5px 5px 0px 0px;
     float: left;
     position: relative;
@@ -48,14 +50,14 @@
 .tabpanel_mover li.active {
     background: #fff;
     cursor: default;
-    border: 1px solid #ddd;
+    border: 1px solid #bbb;
     border-bottom-color: transparent;
 }
 
 .tabpanel_mover li .closer {
     position: absolute;
-    right: 2px;
-    top: 2px;
+    right: 6px;
+    top: 4px;
     width: 11px;
     height: 11px;
     font-family: tahoma;
@@ -65,7 +67,12 @@
     cursor: pointer;
 }
 
+.tabpanel_mover li.active .title {
+    color: #333;
+}
+
 .tabpanel_mover li .title {
+    color: #999;
     font-size: 12px;
     overflow: hidden;
     float: left;
